# kcontext

./: .env.decodo.example  .env.local.example  .env.remote-sync.example  .gitignore  AGENTS.md  Makefile  README.md  biome.json  commitlint.config.cjs  lefthook.yml  package-lock.json  package.json
.codex/: .gitignore  config.toml
.github/: managed-labels.tsv  pull_request_template.md
.sisyphus/: boulder.json
app/: globals.css  layout.tsx  page.tsx
cli/: .env.example  .gitignore  README.md  docker-compose.proxy.yml  pyproject.toml
cli/config/: sources.json
cli/scripts/: channel-pipeline.sh  proxy-check.sh  proxy-down.sh  proxy-up.sh  remote_sync.py
cli/src/kcontext_cli/: audio_language.py  main.py  manual_csv.py  manual_csv_source.py  prune_unplayable_videos.py  supabase_env.py
cli/src/kcontext_cli/commands/: build.py  build_metadata.py  fetch.py  fetch_list.py  list_cmd.py  push.py  push_metadata.py  snapshot_fixtures.py
cli/src/kcontext_cli/fetch_backends/: __init__.py  base.py  decodo_scraper_backend.py  ytdlp_backend.py
cli/src/kcontext_cli/network/: decodo_scraper_api.py  proxy.py
cli/src/kcontext_cli/subtitle/: manual_ko.py  parser.py  search_text.py
cli/tests/: conftest.py  test_build.py  test_build_metadata.py  test_check_playable.py  test_decodo_scraper_backend.py  test_e2e_pipeline.py  test_fetch.py  test_fetch_list.py  test_list.py  test_manual_csv.py  test_proxy.py  test_prune_unplayable_videos.py  test_push.py  test_push_metadata.py  test_search_text.py  test_snapshot_fixtures.py  test_subtitle_parser.py
cli/tests/fixtures/: test_abc123_raw.json
components/: Header.tsx  SearchBar.tsx  TranscriptPanel.tsx  VideoCard.tsx  VideoPlayer.tsx  VocabularyCard.tsx
web/: README.md  (+8 more)
(+193 files in other folders)
